--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asearch.ts",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "TypeScript implementation of node-asearch",
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
@@ -15,6 +15,10 @@
       "ts-node/register"
     ]
   },
+  "files": [
+    "lib",
+    "src"
+  ],
   "author": "teramotodaiki",
   "license": "ISC",
   "devDependencies": {
