--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^14.14.34",
     "ava": "^3.15.0",
+    "semantic-release": "^17.4.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
