fix: trigger release event

--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -5,9 +5,11 @@ name: Test and Publish
 
 on:
   push:
-    branches: "*"
+    branches: ["*"]
+  release:
+    types: [published]
   pull_request:
-    branches: "*"
+    branches: ["*"]
 
 jobs:
   build:
